--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	</head>
 	
 	<body>
+		<h1 style="font-family:Times;font-size:150%;"text-align:center;">Mental Maven: An Online Journal of My Dreams and Thoughts</h1>
 		<p>This blog will chronicle my wild dreams as well as some ramblings. I am also using it as an avenue for me to relearn and improve my HTML/CSS skills.</p>
 	</body>
 	
