--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Mental Maven: An Online Journal of My Dreams and Thoughts</title> /*doesn't do anything */
+		<title>Mental Maven: An Online Journal of My Dreams and Thoughts</title> <!--doesn't do anything-->
 	</head>
 	
 	<body>
-		<h1 style="font-family:Times;font-size:150%;text-align:center;">Mental Maven: An Online Journal of My Dreams and Thoughts</h1> /*formats heading*/
+		<h1 style="font-family:Times;font-size:150%;text-align:center;">Mental Maven: An Online Journal of My Dreams and Thoughts</h1> <!--formats heading-->
 		<p>This blog will chronicle my wild dreams as well as some ramblings. I am also using it as an avenue for me to relearn and improve my HTML/CSS skills.</p>
 	
 	
-	/* creating a top navigation bar */
+	<!--creating a top navigation bar *-->
 		<div class = "topnav">
 			<a class = "active" href="#home">Home</a> /*link to home */
 			<a href="#dreams">Dreams</a>
