--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<!--creating a top navigation bar *-->
 		<div class = "topnav">
-			<a class = "active" href="#home">Home</a> /*link to home */
+			<a class = "active" href="#home">Home</a> <!--*link to home *-->
 			<a href="#dreams">Dreams</a>
 		</div>
 	
